@@ -1,5 +1,13 @@
 2004-12-30  Michael Koch  <konqueror@gmx.de>
 
+	* gnu/java/awt/peer/gtk/GtkToolkit.java:
+	Explicitely import used classes.
+	(getLocalGraphicsEnvironment): Simplify.
+	* java/awt/Window.java (Window):
+	Enable code to get the default GraphicsConfiguration.
+
+2004-12-30  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/plaf/metal/DefaultMetalTheme.java
 	(CONTROL_TEXT_FONT): New static field.
 	(MENU_TEXT_FONT): Likewise.
